{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 28,
  "lineage": "bbb93382-19e5-7efe-541a-758dafeacd16",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "igw-03ca98f202da6a180",
            "tags": {
              "Name": "TerraFormDemoIGW-variable"
            },
            "tags_all": {
              "Name": "TerraFormDemoIGW-variable"
            },
            "vpc_id": "vpc-08ac5c963a79d4a80"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:**********:route-table/rtb-054aad42ef23daff4",
            "id": "rtb-054aad42ef23daff4",
            "owner_id": "**********",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "TFRouteTable-variable"
            },
            "tags_all": {
              "Name": "TFRouteTable-variable"
            },
            "vpc_id": "vpc-08ac5c963a79d4a80"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07147be3cfd75211a",
            "route_table_id": "rtb-054aad42ef23daff4",
            "subnet_id": "subnet-076dac99cdfe0fe73"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.TerraFormDemo-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TerraFormDemo-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:**********:subnet/subnet-076dac99cdfe0fe73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-076dac99cdfe0fe73",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "**********",
            "tags": {
              "Name": "TerraFormDemo-Subnet-1-variable"
            },
            "tags_all": {
              "Name": "TerraFormDemo-Subnet-1-variable"
            },
            "vpc_id": "vpc-08ac5c963a79d4a80"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TerraFormDemo-2-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:**********:subnet/subnet-0e5e06b1eb90f753d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e5e06b1eb90f753d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "**********",
            "tags": {
              "Name": "TerraFormDemo-Subnet-2-Private-variable"
            },
            "tags_all": {
              "Name": "TerraFormDemo-Subnet-2-Private-variable"
            },
            "vpc_id": "vpc-08ac5c963a79d4a80"
          }
        }
      ]
    }
  ]
}